src/test/ui/consts/const-eval/const-eval-overflow-2.stderr
error: could not evaluate constant pattern
  --> $DIR/const-eval-overflow-2.rs:15:9
   |
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const-eval-overflow-2.rs:15:9
   |
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to 2 previous errors

Future incompatibility report: Future breakage diagnostic:
warning: any use of this value will cause an error
  --> $DIR/const-eval-overflow-2.rs:11:25
   |
LL | const NEG_NEG_128: i8 = -NEG_128;
   | ---------------------   ^^^^^^^^ attempt to negate `i8::MIN`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/const-eval-overflow-2.rs:4:36
   |
LL | #![allow(unused_imports, warnings, const_err)]
   |                                    ^^^^^^^^^

